--- a/.gitleaks.toml
+++ b/.gitleaks.toml
@@ -1,9 +1,14 @@
-title = "Custom Gitleaks Configuration"
-description = "Scan for hardcoded secrets in codebase"
-version = 3
+title = "Gitleaks config"
+
+[allowlist]
+description = "Exclude common safe patterns"
+regexes = [
+  '''(?i)dummy[_-]?secret''',
+  '''(?i)1234567890abcdef'''
+]
 
 [[rules]]
-  id = "apikey-generic"
-  description = "Generic API Key"
-  regex = '''(?i)(api[_-]?key|secret|token)[=:]["']?[a-z0-9]{32,45}["']?'''
-  tags = ["apikey", "security", "custom"]
+id = "generic-api-key"
+description = "Generic API Key"
+regex = '''(?i)(api[_-]?key\s*[:=]\s*["']?[A-Za-z0-9_\-]{16,})'''
+tags = ["key", "api", "generic"]
